--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo  App</title>
+    <title>Todo app</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-
-        <H1>Todo Application</H1>
-        <input type="text" id="todoInput" placeholder="Write Your next Todo Here...">
-        <button id="addTodo">Add to do</button>
-<ul id="tasklist">
     
-</ul>
+    <div class="container">
+        <h1>Todo application</h1>
+        <input type="text" id="todoInput" placeholder="Write your next todo here ...">
+        <button id="addTodo">Add Todo</button>
 
+        <ul id="taskList">
+        <ul id="todoList">
 
+        </ul>
     </div>
-   <script src="script.js"></script>
+    <script src="script.js"></script>
+    
 </body>
 </html>
